stylesheets/_modules.scss
/* ... */
.module-splash-screen__logo {
  @include color-svg('../images/signal-logo.svg', $color-white);
  margin: 24px auto;

  &.module-img--256 {
    height: 256px;
    width: 256px;
  }

  &.module-img--200 {
    height: 200px;
    width: 200px;
  }

  &.module-img--150 {
    height: 150px;
    width: 150px;
  }

  &.module-img--128 {
    height: 128px;
    width: 128px;
  }

  &.module-logo-blue {
    background-color: $color-ultramarine-icon;
  }
}

// Module: Message

// Note: this does the same thing as module-timeline__message-container but
//   can be used outside the Timeline contact more easily.
.module-message-container {
  @include button-reset;

  cursor: inherit;
  width: 100%;
  margin-top: 4px;
  margin-bottom: 4px;

  &::after {
    visibility: hidden;
    display: block;
    font-size: 0;
    content: ' ';
    clear: both;
    height: 0;
  }
}

.module-message {
  position: relative;
  display: inline-flex;
  flex-direction: row;
  align-items: stretch;

  outline: none;

  max-width: 406px;

  .module-timeline--width-wide &,
  .module-message-detail & {
    max-width: 75%;
  }

  .module-timeline--width-medium & {
    max-width: 480px;
  }
}

.module-message--expired {
  animation: module-message__shake 0.2s linear infinite;
}

@keyframes module-message__shake {
  0% {
    transform: translateX(0px);
  }
  25% {
    transform: translateX(-5px);
  }
  50% {
    transform: translateX(0px);
  }
  75% {
    transform: translateX(5px);
  }
  100% {
    transform: translateX(0px);
  }
}

.module-message--incoming {
  margin-left: 16px;
  margin-right: auto;
}
.module-message--outgoing {
  float: right;
  margin-right: 16px;
  margin-left: auto;
}

.module-message__buttons {
  display: inline-flex;
  flex-direction: row;
  align-items: center;
  opacity: 0;
}

.module-message:hover .module-message__buttons {
  opacity: 1;
}

.module-message__buttons--incoming {
  padding-left: 8px;

  & > * {
    margin-left: 12px;
    &:first-child {
      margin-left: 0;
    }
  }
}

.module-message__buttons--outgoing {
  padding-right: 8px;
  flex-direction: row-reverse;

  & > * {
    margin-right: 12px;
    &:first-child {
      margin-right: 0;
    }
  }
}

.module-message__buttons__download {
  height: 24px;
  width: 24px;
  cursor: pointer;
  @include light-theme {
    @include color-svg(
      '../images/icons/v2/save-outline-24.svg',
      $color-gray-45
    );
    &:hover {
      @include color-svg(
        '../images/icons/v2/save-outline-24.svg',
        $color-gray-90
      );
    }
  }
  @include dark-theme {
    @include color-svg('../images/icons/v2/save-solid-24.svg', $color-gray-45);
    &:hover {
      @include color-svg(
        '../images/icons/v2/save-solid-24.svg',
        $color-gray-02
      );
    }
  }
}

.module-message__buttons__react {
  height: 24px;
  width: 24px;
  cursor: pointer;
  @include light-theme {
    @include color-svg(
      '../images/icons/v2/add-emoji-outline-24.svg',
      $color-gray-45
    );
    &:hover {
      @include color-svg(
        '../images/icons/v2/add-emoji-outline-24.svg',
        $color-gray-90
      );
    }
  }
  @include dark-theme {
    @include color-svg(
      '../images/icons/v2/add-emoji-outline-24.svg',
      $color-gray-45
    );
    &:hover {
      @include color-svg(
        '../images/icons/v2/add-emoji-outline-24.svg',
        $color-gray-02
      );
    }
  }
}

.module-message__buttons__reply {
  height: 24px;
  width: 24px;
  cursor: pointer;

  @include light-theme {
    @include color-svg(
      '../images/icons/v2/reply-outline-24.svg',
      $color-gray-45
    );
    &:hover {
      @include color-svg(
        '../images/icons/v2/reply-outline-24.svg',
        $color-gray-90
      );
    }
  }
  @include dark-theme {
    @include color-svg('../images/icons/v2/reply-solid-24.svg', $color-gray-45);
    &:hover {
      @include color-svg(
        '../images/icons/v2/reply-solid-24.svg',
        $color-gray-02
      );
    }
  }
}

.module-message__buttons__menu {
  height: 24px;
  width: 24px;
  display: inline-block;
  cursor: pointer;

  @include color-svg('../images/icons/v2/more-horiz-24.svg', $color-gray-45);
  @include light-theme {
    &:hover {
      @include color-svg(
        '../images/icons/v2/more-horiz-24.svg',
        $color-gray-90
      );
    }
  }
  @include dark-theme {
    &:hover {
      @include color-svg(
        '../images/icons/v2/more-horiz-24.svg',
        $color-gray-02
      );
    }
  }

  &--container {
    border-radius: 4px;
    height: 24px;
    // the z-index here is so that this container is above the message and when
    // clicked on, doesn't propagate the click event to the message.
    z-index: 2;

    @include light-theme {
      background-color: $color-white;
    }
    @include dark-theme {
      background-color: $color-gray-95;
    }
  }
}

.module-message__error-container {
  min-width: 28px;
  position: relative;
}

.module-message__error {
  width: 20px;
  height: 20px;
  display: inline-block;
  position: absolute;
  bottom: 4px;

  @include light-theme {
    @include color-svg(
      '../images/icons/v2/error-outline-24.svg',
      $color-accent-red
    );
  }
  @include dark-theme {
    @include color-svg(
      '../images/icons/v2/error-solid-24.svg',
      $color-accent-red
    );
  }
}
.module-message__error--paused {
  @include light-theme {
    @include color-svg(
      '../images/icons/v2/error-outline-24.svg',
      $color-gray-60
    );
  }
  @include dark-theme {
    @include color-svg('../images/icons/v2/error-solid-24.svg', $color-gray-45);
  }
}

.module-message__error--outgoing {
  left: 8px;
}

.module-message__error--incoming {
  right: 8px;
}

.module-message__container-outer {
  line-height: 0;
  display: flex;
  flex-direction: column;
  width: 100%;
  min-width: 0;
}
/* ... */

